--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="thumbnail">thumbnail</string>
     <string name="tags">tags</string>
     <string name="isHosted">isHosted</string>
+    <string name="nullData">Soryy, Try After some time !!!</string>
 </resources>
